--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" style="border: turquoise; border-style: solid;">
    
   <div id="myCarousel" style="padding: 30px;" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -13,15 +13,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="https://i.postimg.cc/1RMy3bJ2/Capture.png" alt="Los Angeles" style="width:100%;">
+        <img src="https://i.postimg.cc/zvyQ0Pj5/image.png" alt="Los Angeles" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="https://i.postimg.cc/TYbn6Y3T/car3.png" alt="Chicago" style="width:100%;">
+        <img src="https://i.postimg.cc/3wGPH65w/image.png" alt="Chicago" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="https://i.postimg.cc/wxZDZsHW/car2.png" alt="New york" style="width:100%;">
+        <img src="https://i.postimg.cc/WbJmSPMt/image.png" alt="New york" style="width:100%;">
       </div>
     </div>
 
@@ -42,20 +42,20 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img [src]="get.image" class="card-img" alt="...">
+              <img [src]="get.image" width="100%" class="card-img" alt="..."  style="padding-left: 15px;  padding-top: 40px;">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">{{get.productname}}</h5>
+                <h5 class="card-title">{{get.bookname}}</h5>
                   
                 <ul>
-                  <li>{{get.productRam}}</li>
-                  <li>{{get.productMemory}}</li>
-                  <li>{{get.productscreensize}}</li>
-                  <li>{{get.productdetails}}</li>
+                  <li>{{get.author}}</li>
+                  <li>{{get.publisher}}</li>
+                  <li>{{get.language}}</li>
+                  <li>{{get.rating}}</li>
                 </ul>
                 
-                <p class="card-text"><b>Rs.{{get.productprice}}</b></p>
+                <p class="card-text"><b>Rs.{{get.price}}</b></p>
                 <div class="col-md-6 text-center" style="color: white;">
                   <form class="form row g-3 " #formRef="ngForm" (ngSubmit)="onSubmit(formRef)">
                         
@@ -89,6 +89,30 @@
                   </form>
                 </div>
                 <button class="btn btn-success float-end" (click)="viewItem(i)" >View</button>
+                <button type="submit" class="btn btn-info " data-toggle="modal" data-target="#myModal">View</button>
+                <div class="modal fade" id="myModal" role="dialog">
+                  <div class="modal-dialog">
+                  
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                       
+                        <h4 class="modal-title">Login Status</h4>
+                        <button type="button" class="close float-end" data-dismiss="modal">&times;</button>
+                      </div>
+                      <div class="modal-body">
+                       
+ <h1>Prod details</h1>
+
+                      </div>
+                      <div class="modal-footer">
+                        <button  class="btn btn-default"(click)="ifOk()" data-dismiss="modal">Ok</button>
+                      </div>
+                    </div>
+                    
+                  </div>
+                </div>
+              
               </div>      
             </div>
           </div>
