--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,7 +52,7 @@
 
     <div class="row mt-5">
       <div class="col-sm-4 " style="padding-bottom: 20px;" *ngFor="let get of courses; let i= index" >
-        <div class="card mb-3" style="max-width: 540px;">
+        <p> <div class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
               <img [src]="get.image" class="card-img" alt="...">
@@ -111,6 +111,7 @@
             </div>
           </div>
         </div>
+ 
       </div>
     </div> 
 </div>
