--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -73,4 +73,21 @@
           </div>
     </div>
 </div>
+
+
+<button type="button" class="btn btn-primary" data-toggle="toast" data-target="#liveToast">Show live toast</button>
+
+
+  <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src="..." class="rounded me-2" alt="...">
+      <strong class="me-auto">Bootstrap</strong>
+      <small>11 mins ago</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      Hello, world! This is a toast message.
+    </div>
+  </div>
+
 </div>
