--- a/src/app/viewproducts/viewproducts.component.html
+++ b/src/app/viewproducts/viewproducts.component.html
@@ -46,12 +46,12 @@
                   <div class="col-6">
                       <button type="submit" class="btn btn-primary">Add Product</button>
                     </div>
-                  
-
-                   
-               
+                         
         </form>
+          
+        
       </div>
+      <button  class="btn btn-primary" (click)="placeOrder(product)">Buy now</button>
       
       <button class="btn btn-warning" (click)="goto()">Back</button>
     </div> 
