--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto float-end ">
-         
-         
-          
+             
           <li class="nav-item">
-            <a class="nav-link" routerLink="pre" routerLinkActive="active" ><i class="glyphicon glyphicon-home"></i></a>
+            <a class="nav-link" routerLink="pre" routerLinkActive="active" ><i class="glyphicon glyphicon-home">Home</i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="login"> Login <i class="glyphicon glyphicon-user"></i></a>
