--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,21 +9,22 @@
                         <div class="col-md-4"></div>
                      </div>
 
-                        <div class="form-group">
-                            <label for="inputusername" class="form-label">Username</label>
-                            <input type="text" class="form-control" id="inputusername" autocomplete="off" name="username" ngModel>
-                          
-                        </div>
+                     <div class="form-group">
+                      <label for="inputuserid" class="form-label">User ID</label>
+                      <input type="text" class="form-control" id="inputuserid" name="userId" ngModel required #userId="ngModel">
+                      <span class="text-danger" *ngIf="(userId.touched || formRef.submitted) && userId.errors?.required">User ID is required</span>
+                  </div>
 
-                        <div class="form-group">
-                            <label for="inputpassword" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="inputpassword" name="password" ngModel>
-                            
-                        </div>
+                  <div class="form-group">
+                      <label for="inputpassword" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="inputpassword" name="password" ngModel required #password="ngModel">
+                      <span class="text-danger" *ngIf="(password.touched || formRef.submitted) && password.errors?.required">Password is required</span>
+                  </div>
+       
              
                         <div class="col-6">
                           
-                            <button type="submit" class="btn btn-info " data-toggle="modal" data-target="#myModal">submit</button>
+                            <button type="submit" class="btn btn-info " data-toggle="modal" data-target="#myModal" [disabled]="formRef.invalid">submit</button>
                           </div>
                          
   <div class="modal fade" id="myModal" role="dialog">
