--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -1,4 +1,17 @@
-
+<div class="container mt-6 " style="background-color: lightgray;" >
+  <nav class="navbar" >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav " *ngFor="let obj of categories;">    
+      <li class="nav-item" style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)">{{obj.ct}}   |</a></li>
+      </ul>
+  
+</div>
+</nav>
+     
+</div>
 
 <div class="container" style="border: turquoise; border-style: solid;">
    
@@ -37,7 +50,7 @@
   </div>
 
 
-    <div class="row">
+    <div class="row" *ngIf="bss">
       <div class="col-sm-4 " style="padding-bottom: 20px;" *ngFor="let get of courses; let i= index" >
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
@@ -119,6 +132,35 @@
         </div>
       </div>
     </div> 
+
+    <div class="col-sm-4 " style="padding-bottom: 20px;"  *ngFor="let get of catcourses; let i= index" >
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img [src]="get.image" width="100%" class="card-img" alt="..."  style="padding-left: 15px;  padding-top: 40px;">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{get.bookname}}</h5>
+                
+              <ul>
+                <li>{{get.author}}</li>
+                <li>{{get.publisher}}</li>
+                <li>{{get.language}}</li>
+                <li>{{get.rating}}</li>
+              </ul>
+              
+              <p class="card-text"><b>Rs.{{get.price}}</b></p>
+              <div class="col-6">
+                <button type="submit" class="btn btn-primary">Add Product</button>
+              </div>
+      
+    <button class="btn btn-success float-end" (click)="viewItem(i)" >View</button>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
 </div>
 
 
